Add Rx and hook up GitHub api.
Prepare for Hilt DI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bderoo.ghubsearch">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".GHubSearchApplication"
         android:allowBackup="true"
         android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
