--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.activity:activity-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation "androidx.browser:browser:1.3.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     implementation 'com.google.android.material:material:1.4.0'
